[project]
name = "litellm-firewall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Taillon", email = "public@christiant.io" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm[proxy]>=1.82.0",
    "openai>=2.26.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
